fix: remove overflow scroll in login page

--- a/beaconnect-react-app/src/pages/Login/components/login.css
+++ b/beaconnect-react-app/src/pages/Login/components/login.css
@@ -13,7 +13,6 @@
   box-sizing: border-box;
   width: 900px;
   height: 500px;
-  overflow: scroll;
   background: #ffffff;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
